--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>SE Test</title>
+	<link rel="stylesheet" href="../CSS/main.min.css">
+</head>
+<body>
+	
 <div id='special-events'>
 
 	<div class="pattern-between row expand collapse">
@@ -21,61 +32,90 @@
 		</div>
 	</section>
 
-	<section class="background-orange section-ribbon">
+	<section class="background-gradient-orange section-ribbon padding-top-20 no-padding-bottom">
+		<div class="row h-center">
+			<div class="col text-center lg-7">
+				<h3 class="text-normal h4">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please email <a href="mailto:microstrategyworld@microstrategy.com" class="text-white">MicroStrategy World</a>.</h3>
+			</div>
+		</div>
 		<div class="row h-left">
-
 			<div id="education" class="col md-6">
-				<div class="special-event-box">
 					<div class="header-box education bullet-group">
-						<h3 class="h2 text-medium text-normal">What’s New in MicroStrategy 2019</h3>
-						<div class="text-label red margin-top-10">Education event</div>
-						<p>All user roles can take this class to use the new MicroStrategy 2019 features to explore the connection between an agile environment and the departmental/enterprise environment, within the context of data governance. Use MicroStrategy Workstation to understand the effects of administrative tasks that maximize the value of your MicroStrategy environments and applications. Ensure data integrity and security while you monitor and analyze your environments, users, and data with Platform Analytics. Empower your sales people and executives by connecting to your data with HyperIntelligence, which uses augmented analytics to display information cards on web pages. Write back to your data with actionable analytics, so that decision makers have the information that they need to make the right decision.</p>
+						<h3 class="h2 text-medium text-normal">Building a More Intelligent Enterprise: Best Practices for the Intelligence Director</h3>
+						<div class="special-event-box text-label red margin-top-10">Education event</div>
+						<p>To navigate and thrive in an increasingly complex datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise—capable of injecting data into every critical workflow and digitizing every asset including people and products. In this class, evaluate your organization’s Intelligent Enterprise maturity. Understand how to establish a foundation for growth and drive analytics and mobility adoption within your enterprise. Topics covered include data governance, process and change management, building your Intelligence Center team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into a more Intelligent Enterprise as you advance on your personal and enterprise analytics and mobility journey.</p>
 
-						<div class="triangle-group red margin-top-10">
-							<p><strong>Monday, February 4</strong><br>
-							11:15am - 3:45pm</p>
+						<div class="row">
+							<div class="col lg-6">
+								<div class="triangle-group red margin-top-10">
+									<p><strong>Monday, February 4</strong><br>
+									11:15am - 3:45pm</p>
+								</div>
+							</div>
+							<div class="col lg-6">
+								<div class="triangle-group red margin-top-10">
+									<p><strong>Wednesday, February 6</strong><br>
+									7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
+								</div>
+							</div>
 						</div>
-						<div class="triangle-group red margin-top-10">
-							<p><strong>Wednesday, February 6</strong><br>
-							7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
-						</div>
+
+						<a class="cta-button small red carat margin-top-10" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 					</div>
-				</div>
 			</div>
 
-			<div id="education" class="col md-6">
-				<div class="special-event-box">
-					<div class="header-box education bullet-group">
-						<h3 class="h2 text-medium text-normal">Transform Your Data-Driven Organization: The Intelligent Enterprise</h3>
-						<div class="text-label red margin-top-10">Education event</div>
-						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise – capable of using data, people, and enterprise assets in aggregated and unique ways. In this class, evaluate where your organization stands today, understand how to establish a foundation for growth, and drive Business Intelligence adoption within your enterprise. Topics covered include data governance, process and change management, enterprise mobility, building your team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into an Intelligent Enterprise as you advance on your personal and enterprise BI journey.</p>
+			<div id="education" class="col md-6 z-1">
+				<div class="header-box education bullet-group">
+					<h3 class="h2 text-medium text-normal">Comprehensive Overview and Hands-On Experience With MicroStrategy 2019</h3>
+					<div class="special-event-box text-label red margin-top-10">Education event</div>
+					<p>MicroStrategy 2019 is the world’s first and only platform for federated analytics, transformation mobility, and HyperIntelligence. It is the most open and complete offering on the market—delivering modern analytics on an enterprise platform that can be deployed on multiple private or public cloud platforms —designed to help make every enterprise a more Intelligent Enterprise. This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019. Topics include:
+						<ul>
+							<li><span class='text-bold'>Modern Analytics:</span> Highlights include the modern MicroStrategy Dossier and Library experience, natural language capabilities, geospatial analytics and interactive collaboration options.</li>
+							<li><span class='text-bold'>Open Architecture:</span> Highlights include MicroStrategy on AWS, MicroStrategy on Azure, and deep dive into REST APIs to build and deploy custom applications.</li>
+							<li><span class='text-bold'>Enterprise Platform:</span> Highlights include MicroStrategy Workstation and Platform Analytics to monitor application usage in real-time, manager user security, build and tune applications for high performance and scale.</li>
+							<li><span class='text-bold'>Federated Analytics:</span> Highlights include an overview of the Enterprise Semantic Graph, a common business glossary and metadata index for enterprise assets and how to leverage MicroStrategy for trusted analytics with Tableau, Qlik, PowerBI, R Studio and Jupyter Notebook.</li>
+							<li><span class='text-bold'>Transformational Mobility:</span> Highlights include mobile dossiers, no-code drag-and-drop and customized development with SDKs.</li>
+							<li><span class='text-bold'>HyperIntelligence:</span> Highlights include HyperCards, integration with Alexa, Chatbots and other augmented reality apps that enable HyperIntelligence, a new category of analytics that imbues every word, object, place, room, and wall with zero-click personalized Intelligence.</li>
+						</ul>
+						</p>
 
-						<div class="triangle-group red margin-top-10">
-							<p><strong>Monday, February 4</strong><br>
-							11:15am - 3:45pm</p>
+						<div class="row">
+							<div class="col lg-6">
+								<div class="triangle-group red margin-top-10">
+									<p><strong>Monday, February 4</strong><br>
+									11:15am - 3:45pm</p>
+								</div>
+							</div>
+							<div class="col lg-6">
+								<div class="triangle-group red margin-top-10">
+									<p><strong>Wednesday, February 6</strong><br>
+										7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
+								</div>
+							</div>
 						</div>
-						<div class="triangle-group red margin-top-10">
-							<p><strong>Wednesday, February 6</strong><br>
-								7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
-						</div>
-					</div>
+						<a class="cta-button small red carat margin-top-10" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 				</div>
 			</div>
-			<div class="col lg-7 background-red">
+		</div>
+		<div class="row h-center z-1">
+			<div class="col lg-7 background-red text-center">
 					<p><small class="text-normal">* To ensure a more personalized learning experience, attendees will be divided into smaller learning groups. Approximately one week prior to World 2019, you will receive an email confirmation with your assigned classroom location. Please plan on arriving 30 minutes prior to your start time and bring your own laptop.</small></p>
 			</div>
 		</div>
+		<div class="pattern-overlay z-0">
+			<img alt="" class="static-pattern pos-bottom-left" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" width="400" height="391" />
+		</div>
 	</section>
 
-		<section class="background-blue section-sparse-triangles">
+		<section class="background-gradient-blue section-sparse-triangles">
 			<div class="row h-left">
-			<div id="partner-day" class="col md-8 background-blue">
+				<div id="partner-day" class="col md-6">
 					<div class="special-event-box">
 						<div class="header-box five-k bullet-group">
 							<h3 class="h2 text-medium text-normal ">Partner Day</h3>
 							<div class="text-label orange margin-top-10">Partner Event</div>
 							<p>Don’t miss this exciting event exclusively designed to ensure the succcess of MicroStrategy Partners. Be in the room to hear how to go to market with MicroStrategy, catch big announcements, and see how to best support your salesforce and practitioners with state-of-the-art demos and content.</p>
-	
+
 							<!-- <div class="text-label navy outline">Date and time</div> -->
 							<div class="triangle-group orange margin-top-10">
 								<p><strong>Wednesday, February 6</strong><br>
@@ -85,29 +125,65 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-
-		<section class="background-green section-stacked-bars">
-			<div class="row h-left">
 
 				<div id="womens-networking" class="col md-6">
 					<div class="special-event-box">
 						<div class="header-box womens-networking bullet-group">
 							<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
-							<div class="text-label navy margin-top-10">Networking Event</div>
+							<div class="text-label orange margin-top-10">Networking Event</div>
 						
 							<p>Join MicroStrategy customers, partners, and employees and mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of analytics. This event will conclude with a networking cocktail reception.</p>
-							<div class="triangle-group navy margin-top-10">
+							<div class="triangle-group orange margin-top-10">
 								<p><strong>Tuesday, February 5</strong><br>
 								4:00pm - 6:00pm</p>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
 
+		<section class="background-white section-round-dots padding-20">
+			<div class="row h-left z-1">
+				<div class="col md-6">
+					<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3525e5b6348441afb08e845834714df4.jpg">
+				</div>
+				<div id="block-party" class="col md-6 z-2">
+					<div class="special-event-box">
+						<div class="header-box dossier bullet-group">
+							<h3 class="h2 text-medium text-normal">Block Party</h3>
+							<div class="text-label orange margin-top-10">Networking Event</div>
+							<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple Watch.</p>
+							<div class="triangle-group orange margin-top-10">
+								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="pattern-overlay z-0">
+				<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png" width="400" height="391" />
+			</div>
+		</section>
 
-				<div id="datathon" class="col md-6">
+		<section class="background-green section-stacked-bars">
+			<div class="row h-left z-1">
+
+				<div id="Dossier" class="col md-6">
+					<div class="special-event-box">
+						<div class="header-box dossier bullet-group">
+							<h3 class="h2 text-medium text-normal">Dossier Contest</h3>
+							<div class="text-label navy margin-top-10">Contest</div>
+							<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple Watch.</p>
+							<div class="triangle-group navy margin-top-10">
+								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+							</div>
+							<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" class="cta-button navy carat small margin-top-10">Submit a Proposal</a>
+						</div>
+					</div>
+				</div>
+
+				<div id="datathon" class="col md-6 ">
 					<div class="special-event-box">
 						<div class="header-box datathon bullet-group">
 							<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
@@ -116,11 +192,15 @@
 							<div class="triangle-group navy margin-top-10">
 								<p><strong>Monday, February 4 &ndash; 6</strong></p>
 							</div>
-						</div>
+							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button navy carat small margin-top-10">Submit Application</a>
 						</div>
 					</div>
 				</div>
 
+			</div>
+
+			<div class="pattern-overlay z-0">
+				<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/370ab0f99e744b6d89af831e4a7561f4.png" width="400" height="391" />
 			</div>
 		</section>
 
@@ -167,3 +247,5 @@
 	.register-btn-bottom {display:none;}
 	div.bottom {padding:0;}
 </style>
+</body>
+</html>
