adjusted hotel info section

--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -67,18 +67,23 @@
 			<div class="col md-6">
 				<div class="line tiny blue thick"></div>
 				<h3 class="text-uppercase text-normal text-small">Hotel details & Amenities</h3>
-				<p><strong>Hyatt Regency Phoenix</strong></p>
-				<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
-				<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
-				<p>Fax: <a href="tel:602-254-9472" class="text-white">602.254.9472</a></p>
-				<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
-
-				<ul class="triangle-list orange">
-					<li>Rooftop pool and hot tub with sun deck</li>
-					<li>24-hour StayFit™ gym</li>
-					<li>Pool/fitness centerr</li>
-					<li>Three dining outlets, including the revolving Compass Lounge and Restaurant</li>
-				</ul>
+				<div class="row">
+					<div class="col lg-6">
+						<p><strong>Hyatt Regency Phoenix</strong></p>
+						<p>122 North Second Street <br> Phoenix, Arizona, 85004</p>
+						<p>Phone: <a href="tel:602-252-1234" class="text-white">602.252.1234</a></p>
+						<p>Fax: <a href="tel:602-254-9472" class="text-white">602.254.9472</a></p>
+						<p>Website: <a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="text-white" target="_blank">Hyatt Regency Phoenix</a></p>
+					</div>
+					<div class="col lg-6">
+						<ul class="triangle-list orange">
+							<li>Rooftop pool and hot tub with sun deck</li>
+							<li>24-hour StayFit™ gym</li>
+							<li>Pool/fitness centerr</li>
+							<li>Three dining outlets, including the revolving Compass Lounge and Restaurant</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
