--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -20,10 +20,10 @@
 	</div>
 	<section id="hero-banner" class="background-red section-square-dots">
 		<div class="row h-left">
-			<div class="col lg-9">
+			<div class="col lg-7">
 				<div class="bullet-group large z-2">
-					<h1 class="text-large">Special events at World 2019</h1>
-					<p class="h3">Special sessions, workshops, and networking opportunities throughout the&nbsp;event.</p>
+					<h1 class="text-large">Special Events</h1>
+					<p class="h3">Sessions, workshops, and networking opportunities at World 2019.</p>
 				</div>
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 					<div class="header-box education bullet-group">
 						<h3 class="h2 text-medium text-normal">Building a More Intelligent Enterprise: Best Practices for the Intelligence Director</h3>
 						<div class="special-event-box text-label red margin-top-10">Education event</div>
-						<p>To navigate and thrive in an increasingly complex datascape, forward-leaning companies are racing to transform into an Intelligent Enterprise—capable of injecting data into every critical workflow and digitizing every asset including people and products. In this class, evaluate your organization’s Intelligent Enterprise maturity. Understand how to establish a foundation for growth and drive analytics and mobility adoption within your enterprise. Topics covered include data governance, process and change management, building your Intelligence Center team, and empowering users. At the end of this course, you will be armed with the tools to start transforming your organization into a more Intelligent Enterprise as you advance on your personal and enterprise analytics and mobility journey.</p>
+						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into Intelligent Enterprises—capable of using data, people, and assets in aggregated and unique ways. In this class, you’ll evaluate where your organization stands today, understand how to establish a foundation for growth, and learn how to drive Business Intelligence adoption within your enterprise. The class will cover topics including data governance, process and change management, enterprise mobility, building your team, and empowering users.</p>
 
 						<div class="row">
 							<div class="col lg-6">
@@ -112,14 +112,14 @@
 				<div id="partner-day" class="col md-6">
 					<div class="special-event-box">
 						<div class="header-box five-k bullet-group">
-							<h3 class="h2 text-medium text-normal ">Partner Day</h3>
+							<h3 class="h2 text-medium text-normal ">Partner Forum</h3>
 							<div class="text-label orange margin-top-10">Partner Event</div>
-							<p>Don’t miss this exciting event exclusively designed to ensure the succcess of MicroStrategy Partners. Be in the room to hear how to go to market with MicroStrategy, catch big announcements, and see how to best support your salesforce and practitioners with state-of-the-art demos and content.</p>
+							<p>This exciting, partner-exclusive event is designed to give insight into today’s dynamic market, see state-of-the-art demos, and hear about extraordinary successes among your peers! Don’t miss out on these sessions!</p>
 
 							<!-- <div class="text-label navy outline">Date and time</div> -->
 							<div class="triangle-group orange margin-top-10">
 								<p><strong>Wednesday, February 6</strong><br>
-								8:00am - 11:00am</p>
+								7:30am - 11:30am</p>
 							</div>
 							<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-36-2c0e177416a0487b95c82069ccaa35ce.aspx?p=36" class="cta-button small orange carat margin-top-10" target="_blank">Learn More</a>
 						</div>
@@ -132,7 +132,7 @@
 							<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
 							<div class="text-label orange margin-top-10">Networking Event</div>
 						
-							<p>Join MicroStrategy customers, partners, and employees and mingle with inspiring women leaders and savvy female executives doing great work and delivering results across the world of analytics. This event will conclude with a networking cocktail reception.</p>
+							<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow MicroStrategy customers, partners, and employees&mdash;and celebrate at a networking cocktail reception.</p>
 							<div class="triangle-group orange margin-top-10">
 								<p><strong>Tuesday, February 5</strong><br>
 								4:00pm - 6:00pm</p>
@@ -152,10 +152,13 @@
 					<div class="special-event-box">
 						<div class="header-box dossier bullet-group">
 							<h3 class="h2 text-medium text-normal">Block Party</h3>
+							<h4>The Duce, Phoenix’s Retro-Chic Warehouse</h4>
 							<div class="text-label orange margin-top-10">Networking Event</div>
-							<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple Watch.</p>
+							<p>More information coming soon!</p>
 							<div class="triangle-group orange margin-top-10">
-								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+								<p><strong>Tuesday, February 5</strong><br>
+								8:00pm - 12:00am</p>
+								
 							</div>
 						</div>
 					</div>
@@ -176,9 +179,8 @@
 							<div class="text-label navy margin-top-10">Contest</div>
 							<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple Watch.</p>
 							<div class="triangle-group navy margin-top-10">
-								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+								<p><strong>February 4 &ndash; 6</strong></p>
 							</div>
-							<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" class="cta-button navy carat small margin-top-10">Submit a Proposal</a>
 						</div>
 					</div>
 				</div>
@@ -188,9 +190,9 @@
 						<div class="header-box datathon bullet-group">
 							<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
 							<div class="text-label navy margin-top-10">Contest</div>
-							<p>MicroStrategy Datathon 2019 is a competition during the World 2019 conference in Phoenix. Select teams will have the opportunity to face-off and compete using the MicroStrategy platform to create and innovative solution, with the aide of MicroStrategy professionals and specialists.</p>
+							<p>This friendly, team-based competition will be hosted during the first two days of the conference. Teams will compete head-to-head in the main exhibit hall at the center of all the action to create an innovative solution using the MicroStrategy Platform, and will have the the opportunity to show their finished product to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! </p>
 							<div class="triangle-group navy margin-top-10">
-								<p><strong>Monday, February 4 &ndash; 6</strong></p>
+								<p><strong>February 4 &ndash; 5</strong></p>
 							</div>
 							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button navy carat small margin-top-10">Submit Application</a>
 						</div>
