--- a/HTML/partner-day.html
+++ b/HTML/partner-day.html
@@ -3,8 +3,8 @@
     <section id="hero" class="no-padding-bottom padding-top-40">
         <div class="row expand no-padding">
             <div class="col md-6 lg-6">
-                <h1 class="text-bold text-blue">World Partner Day 2019</h1>
-                <h2 class="text-normal sub-text">Partner success with exciting announcements you do not want to miss!</h2>
+                <h1 class="text-bold text-blue">World Partner Forum 2019</h1>
+                <h2 class="text-normal sub-text">Special sessions and exciting announcements&mdash;dedicated to valued partners like you.</h2>
             </div>
             <div class="col md-6 lg-6 collapse">
                     <img alt="" class="photo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2e0aa210bfcb4aee81f5ed949dfab7b4.jpg" width="1334" height="890" />
@@ -25,33 +25,34 @@
         
             <div class="col md-5">
                 <div class="bullet-group large">
-                    <h2>Please join our World 2019 Partner Day Wednesday February 6th in (location ?) to hear about how to sell and uniquely go to market with MicroStrategy, how to support your salesforce and practitioners with state of the art demos and content, and of course recognition of extraordinary performances!</h2>
+                    <h2>Join us at World 2019 Partner Forum on Wednesday, February 6th in [INSERT LOCATION]. You’ll gain insight into today’s dynamic market, see state-of-the-art demos, and hear about extraordinary successes among your peers! Don’t miss out on these sessions built for you.</h2>
                 </div>
             </div>
 
             <div class="col md-6">
                 <div class="time-block-wrapper col">
                 <div class="agenda-day">
-                    <h5 class="text-uppercase text-bold">Thursday, February&nbsp;6 Agenda</h5>
+                    <h3>Partner Forum 2019 Agenda</h3>
+                    <h5 class="text-uppercase text-bold">Wednesday, February&nbsp;6</h5>
                     <div class="time-block">
-                        <div class="time-label">7:30am – 8:15am</div>
+                        <div class="time-label">7:30am – 8:00am</div>
                         Breakfast
                     </div>
                     <div class="time-block">
                         <div class="time-label">8:15am – 8:30am</div>
-                        Intro
+                        Opening Remarks
                     </div>
                     <div class="time-block">
                         <div class="time-label">8:30am – 9:00am</div>
-                        Partner Solutions - <strong>DIFFERENTIATE in a dynamic but crowded market</strong>
+                        Standing Out in a Dynamic, Crowded Market
                     </div>
                     <div class="time-block">
                         <div class="time-label">9:00am – 9:30am</div>
-                        Partner Enablement - <strong>New and FREE - How to secure YOUR customers' success</strong>
+                        Securing Your Customers’ Success
                     </div>
                     <div class="time-block">
                         <div class="time-label">9:30am – 10:00am</div>
-                        Partner Territories - <strong>Where to engage with MicroStrategy to drive GROWTH</strong>
+                        Driving Growth with MicroStrategy
                     </div>
                     <div class="time-block">
                         <div class="time-label">10:00am – 10:15am</div>
@@ -59,11 +60,11 @@
                     </div>
                     <div class="time-block">
                         <div class="time-label">10:15am – 11:00am</div>
-                        Partner Tools - <strong>How MicroStrategy INVESTS on you SUCCESS</strong>
+                        How MicroStrategy Invests in Your Success
                     </div>
                     <div class="time-block">
                         <div class="time-label">11:00am – 11:30am</div>
-                        Partner Awards - <strong>Recognize and celebrate your top 2018 ACHIEVEMENTS</strong>
+                        Partner Awards
                     </div>
                 </div>
             </div>
