Updated special events block

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -119,13 +119,15 @@
 
 	<section id="contests" class="background-orange section-ribbon">
 		<div class="row h-left z-2">
-			<div class="col md-6 lg-4">
-				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">2019 Customer Awards</h5>
-					<p>It’s time to celebrate your success! Submit your most innovation or impactful MicroStrategy-powered solution for a chance to be recognized in front of our global community at World. Winners get free passes! Submissions are due by November&nbsp;30th.</p>
-					<a href="https://www.microstrategy.com/us/go/world-2019-customer-awards" class="cta-button blue carat" target="_blank">Submit your entry</a>
+			<div class="col md-10 lg-9 xl-8">
+				<div class="bullet-group large">
+					<h2 class="h3 text-uppercase text-bold">Special Events</h2>
+					<p class="h4">Sessions, workshops, and networking opportunities at World 2019.</p>
+					<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-22-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22" class="cta-button blue carat" target="_blank">See All Events</a>
 				</div>
 			</div>
+		</div>
+		<div class="row h-left z-2">
 			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Datathon 2019</h5>
@@ -136,15 +138,20 @@
 			</div>
 			<div class="col md-6 lg-4">
 				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">Dossier Contest</h5>
-					<p>So you think you can dossier? Prove it! Enter the 2019 Dossier Contest and show us how you’ve built a transformative solution that’s creative, intuitive, and impactful. If your dossier is selected for recognition, you’ll win an iPhoneXs or Apple&nbsp;Watch.</p>
-					<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" target="_blank" class="cta-button blue carat">Submit a proposal</a>
+					<h5 class="text-uppercase text-bold">Women’s Networking</h5>
+					<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow MicroStrategy customers, partners, and employees—and celebrate at a networking cocktail reception.</p>
 				</div>
-
+			</div>
+			<div class="col lg-4">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Education Event: Hands-On Experience With MicroStrategy 2019</h5>
+					<p>This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019.</p>
+					<a class="cta-button blue carat" href="{[E-RSVP YES URL]}">Register now</a>
+				</div>
 			</div>
 		</div>
 		<div class="pattern-overlay z-1">
-			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/90aa2547554248ca83f8686b73bf3cfd.png" width="602" height="425" />
+			<img alt="" class="static-pattern pos-top-right" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/90aa2547554248ca83f8686b73bf3cfd.png" width="602" height="425" />
 			<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" width="400" height="391" />
 		</div>
 	</section>
@@ -179,7 +186,7 @@
 						<div class="event-label">Executive Forum</div>
 						<div class="event-label">Women’s Networking Reception</div>
 						<div class="event-label">Block Party</div>
-						<div class="event-label">Partner Summit</div>
+						<div class="event-label">Partner Forum</div>
 						<div class="event-label">Futures Presentation</div>
 						<div class="event-label">Datathon</div>
 					</div>
@@ -193,7 +200,7 @@
 						<span class="event-title" title=" Executive Forum">Executive Forum</span>
 						<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
 						<span class="event-title" title="Block Party">Block Party</span>
-						<span class="event-title" title="Partner Summit">Partner Summit</span>
+						<span class="event-title" title="Partner Forum">Partner Forum</span>
 						<span class="event-title" title="Futures Presentation">Futures Presentation</span>
 						<span class="event-title" title="Datathon">Datathon</span>
 					</div>
@@ -230,7 +237,7 @@
 						<span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
 						<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
 						<span class="event-title" title="Futures Presentation">Futures Presentation</span>
-						<span class="event-title" title="Partner Summit">Partner Summit</span>
+						<span class="event-title" title="Partner Forum">Partner Forum</span>
 						<span class="event-title" title="Datathon">Datathon</span>
 
 						<span class="event-title" title="Education">Education</span>
@@ -303,7 +310,7 @@
 							</div>
 							<div class="time-block">
 								<div class="time-label">8:00pm – 12:00am</div>
-								Block Party (location TBD)
+								Block Party
 							</div>
 						</div>
 					</div>
@@ -315,6 +322,10 @@
 					<div class="row collapse-y">
 						<div class="col lg-6">
 							<div class="time-block">
+								<div class="time-label">7:30am – 11:30pm</div>
+								Partner Forum
+							</div>
+							<div class="time-block">
 								<div class="time-label">7:30am – 4:30pm</div>
 								Conference Registration
 							</div>
@@ -322,10 +333,7 @@
 								<div class="time-label">8:00am – 9:00am</div>
 								Continental Breakfast and Exhibit Hall Open
 							</div>
-							<!-- <div class="time-block">
-							<div class="time-label">8:00am – 12:00pm</div>
-							Partner Summit
-						</div> -->
+							
 						<div class="time-block">
 							<div class="time-label">9:00am – 12:45pm</div>
 							Sessions &amp; Workshops
