updated block party content

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -151,10 +151,10 @@
 				<div id="block-party" class="col md-6 z-2">
 					<div class="special-event-box">
 						<div class="header-box dossier bullet-group">
-							<h3 class="h2 text-medium text-normal">Block Party</h3>
+							<h3 class="h2 text-medium text-normal">MicroStrategy World Block Party</h3>
 							<h4>The Duce, Phoenix’s Retro-Chic Warehouse</h4>
 							<div class="text-label orange margin-top-10">Networking Event</div>
-							<p>More information coming soon!</p>
+							<p>Mingle and network with fellow World attendees at a throwback venue! The Duce is the place to be in downtown Phoenix&ndash;known for its retro décor, good eats, handmade cocktails, and plenty of games! Join in the fun and compete in a friendly corn hole tournament or show off your skills on the ping pong table. Whatever your pleasure&ndash;good music, drinks, or camaraderie for all&ndash;the World Block Party @The Duce is an event you won’t want to miss!</p>
 							<div class="triangle-group orange margin-top-10">
 								<p><strong>Tuesday, February 5</strong><br>
 								8:00pm - 12:00am</p>
@@ -181,6 +181,7 @@
 							<div class="triangle-group navy margin-top-10">
 								<p><strong>February 4 &ndash; 6</strong></p>
 							</div>
+							<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" class="cta-button navy carat small margin-top-10">Submit a Proposal</a>
 						</div>
 					</div>
 				</div>
@@ -212,9 +213,6 @@
 				
 			</div>
 		</section> -->
-
-		</div>
-	</section>
 
 	<section id="call-to-action">
 		<div class="final-cta">
